typescript/checker/tests/conformance/es6/templates/templateStringUnterminated1.ts.stderr
error: Unexpected eof
 --> $DIR/tests/conformance/es6/templates/templateStringUnterminated1.ts:2:2
  |
2 | `
  |  ^

